--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -18,6 +18,7 @@
         </header>
         <main>
             <h2>Adjective</h2>
+            <!--Instead of paragraphs. These should be an ordered list <ol> with an <li> for each numbered bullet point. Then you don't need the numbers because the <ol> will automatically generate them.-->
                 <p> 1. opposite or contrary to a previous or normal condition</p>
                 <p> 2. acting, operating, or arranged in a manner contrary to the usual</p>
                 <p> 3. so so made that the part which normally prints in color appears white against a colored background</p>
