--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -18,18 +18,23 @@
         </header>
         <main>
             <h2>Adjective</h2>
-            <!--Instead of paragraphs. These should be an ordered list <ol> with an <li> for each numbered bullet point. Then you don't need the numbers because the <ol> will automatically generate them.-->
-                <p> 1. opposite or contrary to a previous or normal condition</p>
-                <p> 2. acting, operating, or arranged in a manner contrary to the usual</p>
-                <p> 3. so so made that the part which normally prints in color appears white against a colored background</p>
+            <ol>
+                <li> 1. opposite or contrary to a previous or normal condition</li>
+                <li> 2. acting, operating, or arranged in a manner contrary to the usual</li>
+                <li> 3. so so made that the part which normally prints in color appears white against a colored background</li>
+            </ol>
             <h2>Verb</h2>
-                <p> 1. to turn completely about in position or direction</p>
-                <p> 2. to turn upside down</p>
-                <p> 3. to cause to take an opposite point of view</p>
+            <ol>
+                <li> 1. to turn completely about in position or direction</li>
+                <li> 2. to turn upside down</li>
+                <li> 3. to cause to take an opposite point of view</li>
+            </ol>
             <h2>Noun</h2>
-                <p> 1. something directly contrary to something else</p>
-                <p> 2. an act or instance of reversing</p>
-                <p> 3. the back part of something</p>
+            <ol>
+                <li> 1. something directly contrary to something else</li>
+                <li> 2. an act or instance of reversing</li>
+                <li> 3. the back part of something</li>
+            </ol>
         </main>
     </body>
 </html>
