--- a/Lab06/index.html
+++ b/Lab06/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Cats</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="cathealth.html">Cat Health</a>
+        <a href="cattoys.html">Cat Toys</a>
+    </nav>
+    <main>
+        <img src="images/Cat-1.jpg" alt="cat photo">
+        <p>Cats are a small domesticated carnivorous mammal with soft fur, a short snout, and retractable claws. It is widely kept as a pet or for catching mice, and many breeds have been developed.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/r296qRnHok4?si=BluhoiIiXdfhlLCZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </main>
 </body>
 </html>
