--- a/Lab05/index.html
+++ b/Lab05/index.html
@@ -85,7 +85,7 @@
             <h2 id="sports">Sports</h2>
                 <article>
                     <h3>Report: Chucking A Baseball 99 MPH Past Highway Radar Speed Sign Remains Best Indication That You Still Got The Goods</h3>
-                    <img src="images/4.jpg" alt="man throwing ball"><!--Missing  class="img-only" on this image-->
+                    <img class="img-only" src="images/4.jpg" alt="man throwing ball">
                     <footer>
                         <p>
                             <span>
@@ -111,7 +111,7 @@
             <h2 id="entertainment">Entertainment</h2>
                 <article>
                     <h3>Space Jam 2 Taps Mahershala Ali To Play LeBron James</h3>
-                    <img src="images/6.jpg" alt="LeBron James"> <!--Missing  class="img-only" on this image-->
+                    <img class="img-only" src="images/6.jpg" alt="LeBron James">
                     <footer>
                         <p>
                             <span>
