Portfolio-Coding-finished

--- a/Portfolio-Coding/index.html
+++ b/Portfolio-Coding/index.html
@@ -16,9 +16,11 @@
 <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+    <header>
     <img src="images/Logo copy.svg" alt="The Letters S and C in a circular logo" width="60pix">
     <h1>Shannon Collier</h1>
-    <section>
+    </header>
+    <section class="about">
     <h2>About Me</h2>
     <p>My name is Shannon Collier, and I’m a creative writing major, and double minor in multi-media and communication, and journalism. My hope is to use my wide variety of skills to get into the media industry. I plan to writescripts for difrent mediums, such as shows, movies, theature, and games. However, I plan to do side jobs as I have gained a plefer of skills from my clsses, such as journalism, web page design, photography, and writing poetry.</p>
     <h2>Experience</h2>
@@ -28,24 +30,27 @@
         <li>UWEC Campus Security Worker</li>
         <li>UWEC Campus Front Desk Worker</li>
         <li>Experience with Word, Adobe, Google, and Zoom</li>
+        <li>Experience with building websites on GitHub</li>
     </ul>
     </section>
-    <section>
+    <section class="gallery">
         <img src="images/BTorte.jpeg" alt="Bavarian Torte">
         <img src="images/plants.jpeg" alt="pine bush with light on the needles">
         <img src="images/MoHo.png" alt="Mount Horeb Logo">
         <img src="images/River.jpeg" alt="Photo of a river with a mini waterfall">
         <img src="images/Cupcake.jpeg" alt="cupcake with a frosted rose on top">
         <img src="images/Sun.jpeg" alt="Photo of stairs outside with the sun shining through them">
-        <img src="images/WhiteCake.jpeg" alt="white cake with red flowers and dots">
         <img src="images/UWEC.jpg" alt="UWEC logo">
+        <img src="images/WhiteCake.jpeg" alt="white cake with red flowers and dots">
         <img src="images/cookies.jpeg" alt="cookies with flowers and baseballs">
     </section>
     <footer>
         <img src="images/Logo copy.svg" alt="The Letters S and C in a circular logo" width="60pix">
+        <div>
         <h2>Contacts</h2>
         <h3>Phone:(608)515-3554</h3>
         <h3>Email:colliershannon2003@gamil.com</h3>
+        </div>
     </footer>
 </body>
 </html>
