--- a/Lab15/order.html
+++ b/Lab15/order.html
@@ -10,9 +10,11 @@
     <header>
         <h1>Brunch</h1>
         <a href="index.html"><img src=images/logo.svg></a>
+        <!--Add <nav> here-->
         <a href="menu.html">Menu</a>
         <a href="about.html">About</a>
         <a href="order.html">Order</a>
+        <!--Add </nav> here-->
     </header>
     <main></main>
     <footer>
