--- a/Lab12/index.html
+++ b/Lab12/index.html
@@ -40,7 +40,7 @@
             <input type="number" id="tentacles" name="monster-tentacles" value="0" min="0" max="1000000">
 
             <label for="picture">Picture of Monster</label>
-            <input type="file" id="picture" name="monster-picture" accept="images/*">
+            <input type="file" id="picture" name="monster-picture" accept="images/">
 
             <label for="eyes">Number of Eyeballs</label>
             <input type="number" id="eyes" name="monster-eyes" min="0" max="22">
