client project progress

--- a/Client-Project-Coding/index.html
+++ b/Client-Project-Coding/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Cork Cafe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>Banana Cork Cafe</header>
-    <p></p>
+    <img src="images/Logo.svg">
+    <h1>Banana Cork Cafe</h1>
+    <nav>
+        <a href="index.html">About</a>
+        <a href="menu.html">Menu</a>
+        <a href="catering.html">Catering</a>
+        <a href="contact.html">Contact</a>
+        <a href="apply.html">Apply</a>
+    </nav>
+    <p>Banana Cork Cafe was founded in 2015 by Jane and John Smith as their dream was to open a small cafe. They host small events at their cafe once a month in order to help build a community within their city. Banana Cork Cafe strives to provide customer with a calm, relaxing, and warm environment where they can enjoy food and drinks, talk to friends, and study. Please enjoy your stay at Banana Cork Cafe. </p>
+    <section>
+        <img src="images/resturant.jpg" alt="cafe">
+        <img src="images/coffee.jpg" alt="coffee">
+        <img src="images/pie.jpg" alt="pie">
+        <img src="images/Iced coffee.jpg" alt="iced coffee">
+    </section>
 </body>
 </html>
