More Client project updates

--- a/Client-Project-Coding/apply.html
+++ b/Client-Project-Coding/apply.html
@@ -16,5 +16,18 @@
         <a href="contact.html">Contact</a>
         <a href="apply.html">Apply</a>
     </nav>
+    <section>
+        <h3>Open Positions:</h3>
+        <h3>Dish Washer</h3>
+        <p>This position involves washing dishes, drying dishes, and cleaning in the kitchen area.</p>
+        <h3>Barista</h3>
+        <p>This position involves taking orders, making coffee, baking pastries, and cooking several dishes.</p>
+    </section>
+    <section>
+        <h3>All current positions require no prior experience</h3>
+    </section>
+    <section>
+        <h3>To apply, please email <nav><a href="index.html">bananacorkcafe@notarealemail.com</a></nav> to send in a resume along with what position you are applying for.</h3>
+    </section>
 </body>
 </html>
