--- a/Client-Project-Coding/menu.html
+++ b/Client-Project-Coding/menu.html
@@ -16,5 +16,8 @@
         <a href="contact.html">Contact</a>
         <a href="apply.html">Apply</a>
     </nav>
+    <section>
+        <h3></h3>
+    </section>
 </body>
 </html>
