Client Project mostly done

--- a/Client-Project-Coding/contact.html
+++ b/Client-Project-Coding/contact.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/Logo.svg">
-    <h1>Banana Cork Cafe</h1>
+    <header>
+        <img src="images/Logo.svg" alt="banana cork cafe logo" width="25%">
+        <h1>Banana Cork Cafe</h1>
+    </header>
     <nav>
-        <a href="index.html">About</a>
-        <a href="menu.html">Menu</a>
-        <a href="catering.html">Catering</a>
-        <a href="contact.html">Contact</a>
-        <a href="apply.html">Apply</a>
+        <h1>
+            <a href="index.html">About</a>
+            <a href="menu.html">Menu</a>
+            <a href="catering.html">Catering</a>
+            <a href="contact.html">Contact</a>
+            <a href="apply.html">Apply</a>
+        </h1>
     </nav>
+    <h3>To contact us about catering, orders, applications, or general questions, please reach us at <nav><a href="index.html">(123)456-7890</a></nav> or <nav><a href="index.html">bananacorkcafe@notarealemail.com</a></nav></h3>
 </body>
 </html>
