--- a/Client-Project-Coding/index.html
+++ b/Client-Project-Coding/index.html
@@ -7,21 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/Logo.svg">
-    <h1>Banana Cork Cafe</h1>
+    <header>
+        <img src="images/Logo.svg" alt="banana cork cafe logo" width="25%">
+        <h1>Banana Cork Cafe</h1>
+    </header>
     <nav>
+        <h1>
         <a href="index.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="catering.html">Catering</a>
         <a href="contact.html">Contact</a>
         <a href="apply.html">Apply</a>
+        </h1>
     </nav>
     <p>Banana Cork Cafe was founded in 2015 by Jane and John Smith as their dream was to open a small cafe. They host small events at their cafe once a month in order to help build a community within their city. Banana Cork Cafe strives to provide customer with a calm, relaxing, and warm environment where they can enjoy food and drinks, talk to friends, and study. Please enjoy your stay at Banana Cork Cafe. </p>
-    <section>
+    <section class="gallery">
         <img src="images/resturant.jpg" alt="cafe">
         <img src="images/coffee.jpg" alt="coffee">
         <img src="images/pie.jpg" alt="pie">
-        <img src="images/Iced coffee.jpg" alt="iced coffee">
+        <img src="images/Icedcoffee.jpg" alt="iced coffee">
     </section>
 </body>
 </html>
