--- a/Client-Project-Coding/menu.html
+++ b/Client-Project-Coding/menu.html
@@ -7,17 +7,68 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/Logo.svg">
-    <h1>Banana Cork Cafe</h1>
+    <header>
+        <img src="images/Logo.svg" alt="banana cork cafe logo" width="25%">
+        <h1>Banana Cork Cafe</h1>
+    </header>
     <nav>
-        <a href="index.html">About</a>
-        <a href="menu.html">Menu</a>
-        <a href="catering.html">Catering</a>
-        <a href="contact.html">Contact</a>
-        <a href="apply.html">Apply</a>
+        <h1>
+            <a href="index.html">About</a>
+            <a href="menu.html">Menu</a>
+            <a href="catering.html">Catering</a>
+            <a href="contact.html">Contact</a>
+            <a href="apply.html">Apply</a>
+        </h1>
     </nav>
     <section>
-        <h3></h3>
+        <h3>Beverages:</h3>
+        <ul>
+            <li>Coffee:</li>
+            <li>Espresso $2.50</li>
+            <li>Latte $3.50</li>
+            <li>Cappuccino $3.00</li>
+            <li>Americano $2.75</li>
+        </ul>
+        <ul>
+            <li>Tea:</li>
+            <li>Green Tea $2.00</li>
+            <li>Black Tea $2.00</li>
+            <li>Herbal Tea $2.25</li>
+        </ul>
+        <ul>
+            <li>Misc.:</li>
+            <li>Hot Chocolate $2.50</li>
+            <li>Lemonaid $2.00</li>
+            <li>Water $0.00</li>
+        </ul>
+    </section>
+    <section>
+        <h3>Flavor Shots: $0.50 each</h3>
+        <ul>
+            <li>Chocolate</li>
+            <li>Vanilla</li>
+            <li>Hazlenut</li>
+            <li>Lavender</li>
+            <li>Strawberry</li>
+            <li>Orange</li>
+        </ul>
+    </section>
+    <section>
+        <h3>Food:</h3>
+        <ul>
+            <li>Muffins $2.00</li>
+            <li>Cookies $1.50</li>
+            <li>Coffee Cake $3.50</li>
+            <li>Pie $3.50</li>
+        </ul>
+    </section>
+    <section class="gallery">
+        <img src="images/hotcoffee.jpg" alt="hot coffee">
+        <img src="images/muffins.jpg" alt="Muffins">
+        <img src="images/pie2.jpg" alt="pie">
+        <img src="images/icedcoffee2.jpg" alt="iced coffee">
+        <img src="images/tea.jpg" alt="tea">
+        <img src="images/lemonaid.jpg" alt="lemonaid">
     </section>
 </body>
 </html>
