--- a/Client-Project-Coding/apply.html
+++ b/Client-Project-Coding/apply.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/Logo.svg">
-    <h1>Banana Cork Cafe</h1>
+    <header>
+        <img src="images/Logo.svg" alt="banana cork cafe logo" width="25%">
+        <h1>Banana Cork Cafe</h1>
+    </header>
     <nav>
-        <a href="index.html">About</a>
-        <a href="menu.html">Menu</a>
-        <a href="catering.html">Catering</a>
-        <a href="contact.html">Contact</a>
-        <a href="apply.html">Apply</a>
+        <h1>
+            <a href="index.html">About</a>
+            <a href="menu.html">Menu</a>
+            <a href="catering.html">Catering</a>
+            <a href="contact.html">Contact</a>
+            <a href="apply.html">Apply</a>
+        </h1>
     </nav>
     <section>
         <h3>Open Positions:</h3>
