--- a/Client-Project-Coding/catering.html
+++ b/Client-Project-Coding/catering.html
@@ -7,14 +7,63 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/Logo.svg">
-    <h1>Banana Cork Cafe</h1>
+    <header>
+        <img src="images/Logo.svg" alt="banana cork cafe logo" width="25%">
+        <h1>Banana Cork Cafe</h1>
+    </header>
     <nav>
-        <a href="index.html">About</a>
-        <a href="menu.html">Menu</a>
-        <a href="catering.html">Catering</a>
-        <a href="contact.html">Contact</a>
-        <a href="apply.html">Apply</a>
+        <h1>
+            <a href="index.html">About</a>
+            <a href="menu.html">Menu</a>
+            <a href="catering.html">Catering</a>
+            <a href="contact.html">Contact</a>
+            <a href="apply.html">Apply</a>
+        </h1>
     </nav>
+    <section>
+        <h3>Beverages:</h3>
+        <ul>
+            <li>Coffee:</li>
+            <li>Espresso $2.50, or 4 for $9.50</li>
+            <li>Latte $3.50, or 4 for $12</li>
+            <li>Cappuccino $3.00, or 4 for $10</li>
+            <li>Americano $2.75, or 4 for $8</li>
+        </ul>
+        <ul>
+            <li>Tea:</li>
+            <li>Green Tea $2.00, or 4 for $6</li>
+            <li>Black Tea $2.00, or 4 for $6</li>
+            <li>Herbal Tea $2.25, or 4 for $7</li>
+        </ul>
+        <ul>
+            <li>Misc.:</li>
+            <li>Hot Chocolate $2.50, or 4 for $8</li>
+            <li>Lemonaid $2.00, or 4 for $6</li>
+        </ul>
+    </section>
+    <section>
+        <h3>Flavor Shots: $0.50 each</h3>
+        <ul>
+            <li>Chocolate</li>
+            <li>Vanilla</li>
+            <li>Hazlenut</li>
+            <li>Lavender</li>
+            <li>Strawberry</li>
+            <li>Orange</li>
+        </ul>
+    </section>
+    <section>
+        <h3>Food:</h3>
+        <ul>
+            <li>Muffins $2.00, or 4 for $6</li>
+            <li>2 Cookies $1.50, or 8 for $10</li>
+            <li>Coffee Cake $3.50, or full cake for $15</li>
+            <li>Pie $3.50, or full pie for $10 </li>
+        </ul>
+    </section>
+    <section>
+        <h3>We only offer pick up for catering. To order for pick up, please call (123)456-7890
+            or Email bananacorkcafe@notarealemail.com </h3>
+    </section>
 </body>
 </html>
