--- a/Client-Project-Coding/catering.html
+++ b/Client-Project-Coding/catering.html
@@ -62,8 +62,9 @@
         </ul>
     </section>
     <section>
-        <h3>We only offer pick up for catering. To order for pick up, please call (123)456-7890
-            or Email bananacorkcafe@notarealemail.com </h3>
+        <h3>
+            We only offer pick up for catering. To order for pick up, please call <nav><a href="index.html">(123)456-7890</a></nav> or <nav><a href="index.html">bananacorkcafe@notarealemail.com</a></nav>
+        </h3>
     </section>
 </body>
 </html>
