--- a/Client-Project-Coding/contact.html
+++ b/Client-Project-Coding/contact.html
@@ -5,21 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Cork Cafe</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="images/site.webmanifest">
+<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="images/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="images/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
-        <img src="images/Logo.svg" alt="banana cork cafe logo" width="25%">
+        <img src="images/Logo.svg" alt="banana cork cafe logo" width="150">
         <h1>Banana Cork Cafe</h1>
     </header>
     <nav>
-        <h1>
+        <h2>
             <a href="index.html">About</a>
             <a href="menu.html">Menu</a>
             <a href="catering.html">Catering</a>
             <a href="contact.html">Contact</a>
             <a href="apply.html">Apply</a>
-        </h1>
+        </h2>
     </nav>
-    <h3>To contact us about catering, orders, applications, or general questions, please reach us at <nav><a href="index.html">(123)456-7890</a></nav> or <nav><a href="index.html">bananacorkcafe@notarealemail.com</a></nav></h3>
+To contact us about catering, orders, applications, or general questions, please reach us at <nav><a href="index.html">(123)456-7890</a></nav> or <nav><a href="index.html">bananacorkcafe@notarealemail.com</a></nav>
 </body>
 </html>
