--- a/Client-Project-Coding/index.html
+++ b/Client-Project-Coding/index.html
@@ -5,23 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Cork Cafe</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="images/site.webmanifest">
+<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="images/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="images/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
-        <img src="images/Logo.svg" alt="banana cork cafe logo" width="25%">
+        <img src="images/Logo.svg" alt="banana cork cafe logo" width="150">
         <h1>Banana Cork Cafe</h1>
     </header>
     <nav>
-        <h1>
+        <h2>
         <a href="index.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="catering.html">Catering</a>
         <a href="contact.html">Contact</a>
         <a href="apply.html">Apply</a>
-        </h1>
+        </h2>
     </nav>
     <p>Banana Cork Cafe was founded in 2015 by Jane and John Smith as their dream was to open a small cafe. They host small events at their cafe once a month in order to help build a community within their city. Banana Cork Cafe strives to provide customer with a calm, relaxing, and warm environment where they can enjoy food and drinks, talk to friends, and study. Please enjoy your stay at Banana Cork Cafe. </p>
     <section class="gallery">
+        <h2>Our Beautiful Cafe</h2>
         <img src="images/resturant.jpg" alt="cafe">
         <img src="images/coffee.jpg" alt="coffee">
         <img src="images/pie.jpg" alt="pie">
